fix compatibility on IE

--- a/21Education.WebSite/CSS/Carousel-index.css
+++ b/21Education.WebSite/CSS/Carousel-index.css
@@ -1,12 +1,12 @@
 ﻿.carousel {
     --ImgWidth: 900;
     --ImgHeight: 300;
-    --ShowCount:1;
+    --ShowCount: 1;
 }
 
     .carousel .container {
         position: relative;
-        width: calc(var(--ImgWidth)*var(--ShowCount)px);
+        width: calc(var(--ContainerWidth)*1px);
         height: calc(var(--ImgHeight)*1px);
         margin: 0 auto;
         overflow: hidden;
@@ -14,7 +14,7 @@
 
         .carousel .container .slider-container {
             position: absolute;
-            left: calc(var(--ImgWidth)*var(--ShowCount)*-1px);
+            left: calc(var(--ImgReal)*var(--ShowCount)*-1px);
             top: 0;
             width: 10000px;
             height: calc(var(--ImgHeight)*1px);
@@ -63,7 +63,7 @@
             .carousel .container .carousel-btn img {
                 height: 40px;
                 width: 40px;
-                opacity:1;
+                opacity: 1;
             }
 
 .flipx {
